--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Index</title>
+	<title>Calclutor & Convator</title>
 	<style type="text/css">
 		body{
 			margin: 0px;
@@ -9,6 +9,7 @@
 			margin-left: 0px;
 			height: 510px;
 			width: 500px;
+			background-color:gray;
 		}
 		iframe{
 			height: 100%;
