--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"/>
 <title>Eid Mubarak</title>
     <meta name="google" value="notranslate">
-    <meta property="og:type" content="Make your own wonderful Wishing Eid Mubarak" />
-    <meta property="og:title" content="Wishing You Happy EID Mubarak 2018" />
+    
+    <meta property="og:title" content="Wishing You Happy EID Mubarak" />
     <meta property="og:url" content="https://www.technovedant.com"/>
     <meta property="og:description" content="CLICK HERE" />
     <meta property="og:site_name" content="Create Awesome wisheing Card" />
@@ -15,8 +15,8 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 
   <meta charset="UTF-8">
-  <meta name="description" content="Eid Mubarak 2018">
-  <meta name="keywords" content="Eid Script in New Style, Eid Mubarak 2018 free blogger script, Eid Mubarak wishes 2018">
+  <meta name="description" content="Eid Mubarak ">
+  <meta name="keywords" content="Eid Script in New Style, Eid Mubarak 2018 free blogger script, Eid Mubarak">
   <meta name="author" content="Techno Vedant">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="openid.server" href="https://www.blogger.com/openid-server.g" />
