--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <title>Sohel Rana Wishing You</title>
   <meta charset="UTF-8">
+  <meta name="google" value="notranslate">
+    <meta property="og:type" content="Make your own wonderful Wishing Eid Mubarak" />
+    <meta property="og:title" content="Wishing You Happy EID Mubarak " />
+    <meta property="og:description" content="CLICK HERE" />
+    <meta property="og:site_name" content="Create Awesome wisheing Card" />
     <style type="text/css">
       body{
     margin: 0;
@@ -226,7 +231,12 @@ p{
   font-size: 60px;
   padding: 5px;
 }
-    </style>
+#demo{
+  margin-top: 50px;
+  font-size: 20px;
+   
+}
+</style>
 </head>
 <body>
 <table>
@@ -262,6 +272,7 @@ p{
 
     </div>
     <div class="main">
+    	<div id="demo"></div>
       <h2>Sohel Rana</h2>
       <h1>
             <span class="n">W</span>
@@ -274,6 +285,7 @@ p{
         </h1>
         <h3>You</h3>
         <p><span class="bdw">EID</span> <span class="w"> </span>   <span class="bdw"> Mubarak</span></p>
+
     </div>
   </td>
   <td class="right-td">
@@ -304,8 +316,35 @@ p{
 </div><br><br>
 <div class="footer">
   <center>
-    <code>May Allah keep you happy in every moment of you life and fulfill your all dreams and hopes. </code>
+    <code>May Allah keep you happy in every moment of your life and fulfill your all dreams and hopes. Eid Mubarak!!! </code>
   </center>
 </div>
+<script>
+// Set the date we're counting down to
+var countDownDate = new Date("may 14, 2021 00:00:00").getTime();
+
+// Update the count down every 01 second
+var x = setInterval(function() {
+
+  // Get todays date and time
+  var now = new Date().getTime();
+
+  // Find the distance between now an the count down date
+  var distance = countDownDate - now;
+
+  // Time calculations for days, hours, minutes and seconds
+  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+  // Display the result in the element with id="demo"
+  document.getElementById("demo").innerHTML = days + "<i> Days,</i> " + hours + " <i>Hrs,</i> "
+  + minutes + "<i> Min,</i> " + seconds + "<i> Sec</i> ";
+
+  // If the count down is finished, write some text 
+
+}, 1000);
+</script>
 </body>
 </html>
